chore: upgrade spring boot version